# electro

./: .gitignore  AUTHORS  CITATION.cff  README.md
analog/: oscillator.circ  voltage.circ  voltage.py
cpu/65xx/: Makefile  defs.inc  init.asm  keypad.asm  keys.asm  lcd.asm  math.asm  mem.cfg  monitor.asm  sleep.asm  string.asm  test_io.asm  test_irq.asm  test_keypad.asm  test_keys.asm  test_lcd.asm  test_mem.asm  test_piezo.asm  test_piezo2.asm  test_timer.asm  timer.asm
fpga/: clear_tmp.sh
fpga/arithmetics/: adder.sv  adder.vhdl  adder_test.sv  adder_test.vhdl  float_multiplier.sv  float_multiplier.vhdl  float_multiplier_tb.sv  float_multiplier_tb.vhdl  float_multiplier_test.sv  float_multiplier_test.vhdl  float_ops.sv  float_ops.vhdl  float_ops_tb.sv  float_ops_tb.vhdl  float_ops_test.sv  float_ops_test.vhdl  multiplier.sv  multiplier.vhdl  multiplier_tb.sv  multiplier_tb.vhdl  sevenseg.sv  subtractor.sv  subtractor.vhdl  subtractor_tb.sv  subtractor_tb.vhdl
fpga/arithmetics_sv/: divider.sv  float_ops.sv  multiplier.sv
fpga/audio/: audio_cfg.vhdl
fpga/clock/: clkctr.vhdl  clkdiv.vhdl  clkgen.vhdl  clksync.vhdl
fpga/clock_sv/: clkgen.sv
fpga/comm/: serial.vhdl  serial_2wire.vhdl  serial_async_rx.vhdl  serial_async_tx.vhdl  serial_duplex.vhdl
fpga/comm_sv/: serial.sv
fpga/concept_tests/: delay.vhdl  fsm.vhdl  latch.vhdl  pulses.vhdl
fpga/conv/: bcd.vhdl  conv.vhdl
fpga/counter/: counter.vhdl  counter_tb.v  counter_tb.vhdl  counter_test.vhdl  sevenseg.v
fpga/cpu/: CMakeLists.txt
fpga/cpu/compiler/: ast.cpp  ast.h  ast_asm.cpp  ast_asm.h  ast_optimise.cpp  ast_printer.cpp  ast_printer.h  compiler.cpp  compilergen.cpp  grammar.cpp  grammar.h  lexer.cpp  lexer.h  lval.h  symbol.cpp
fpga/cpu/tests/: fac.scr
fpga/cpu/vm/: main.cpp  opcodes.h  types.h  vm.cpp  vm.h
fpga/display/: lcd_2wire.vhdl  lcd_3wire.vhdl  txtlcd_2wire.vhdl  txtlcd_3wire.vhdl  video.vhdl  video_cfg.vhdl
fpga/display_sv/: testpattern.sv  tile.sv  video.sv  video_serial.sv
fpga/hw/: lcd_3wire.vhdl
fpga/lib/: bcd.sv  bcd.vhdl  clkdiv.vhdl  conv.vhdl  counter.vhdl  debounce.vhdl  debounce_button.sv  debounce_switch.sv  edge.sv  edge.vhdl  lcd.vhdl  lcd_2wire.vhdl  lcd_3wire.vhdl  lcd_3wire_tb.vhdl  ram.vhdl  serial.sv  serial.vhdl  serial_tb.sv  serial_tb.vhdl  sevenseg.sv  sevenseg.v  sevenseg.vhdl  sram_ctrl.vhdl  tile.vhdl  video.vhdl  video_cfg.vhdl
fpga/lib_sv/: bcd.sv  debounce_button.sv  debounce_switch.sv  edge.sv  ram.sv  video.sv
fpga/mem/: dram_ctrl.vhdl  fifo.vhdl  piso.vhdl  ram.vhdl  sipo.vhdl  stack.vhdl
fpga/mem_sv/: ram.sv
fpga/test_counter/: counter.v  counter_tb.vhdl
fpga/test_lcd/: main.vhdl  rom.vhdl
fpga/test_vid/: textrom.vhdl  videotest.vhdl
fpga/testbenches/: adder_tb.sv  adder_tb.vhdl  clkgen_tb.vhdl  clkpulsegen_tb.vhdl  clocks_tb.vhdl  clocks_tb2.vhdl  clocks_tb3.vhdl  clocks_tb4.vhdl  conv_tb.vhdl  delay_tb.vhdl  divider_tb.sv  divider_tb.vhdl  dram_ctrl_tb.vhdl  fifo_tb.vhdl  float_ops_tb.sv  float_ops_tb.vhdl  fsm_tb.vhdl  latch_tb.vhdl  lcd_3wire_tb.vhdl  lfsr_tb.vhdl  multiplier_tb.sv  multiplier_tb.vhdl  piso_tb.vhdl  ram_tb.sv  ram_tb.vhdl  rom_tb.sv  serial_2wire_tb.vhdl  serial_async_tx_tb.vhdl  serial_tb.sv  serial_tb.vhdl  serial_tb2.vhdl  sipo_tb.vhdl  sram_ctrl_tb.vhdl  stack_tb.vhdl  subtractor_tb.sv  subtractor_tb.vhdl  tile_tb.vhdl  txtlcd_3wire_tb.vhdl  video_tb.sv  video_tb.vhdl
fpga/testbenches_sv/: adder_tb.sv  divider_tb.sv  float_ops_tb.sv  lcd_serial_tb.sv  multiplier_tb.sv  ram_tb.sv  serial_2wire_tb.sv  serial_tb.sv  serial_tb2.sv  subtractor_tb.sv  video_tb.sv
fpga/tests/: clocks_tb.vhdl  delay_test.vhdl  float_ops_test.sv  float_ops_test.vhdl  multiplier_test.sv  sram.vhdl  sram_tester.vhdl
fpga/video/: sevenseg.vhdl
fpga_sv/: clear_tmp.sh
fpga_sv/arithmetics/: divider.sv  float_ops.sv  multiplier.sv
fpga_sv/clock/: clkgen.sv
fpga_sv/comm/: serial.sv  serial_2wire.sv  serial_async_rx.sv  serial_async_tx.sv  serial_duplex.sv  serial_tx.sv
fpga_sv/concept_tests/: delay.sv  fsm.sv  pulses.sv  state_and_counter.sv  state_and_counter2.sv  structs.sv
fpga_sv/conv/: bcd.sv  hexchar.sv
fpga_sv/display/: lcd_3wire.sv  ledmatrix.sv  oled_serial.sv  pixlcd_3wire.sv  sevenseg.sv  sevenseg_serial.sv  tile.sv  txtlcd_3wire.sv  video_serial.sv
fpga_sv/lib/: lfsr.sv
fpga_sv/mem/: bytesel.sv  fifo.sv  flash_serial.sv  memcpy.sv  memsel.sv  piso.sv  ram.sv  ram_2port.sv  stack.sv
fpga_sv/proc/: cpu.sv  cpu16.sv  cpu8.sv
fpga_sv/sync/: debounce_button.sv  debounce_switch.sv  edge.sv  syncbit.sv
fpga_sv/testbenches/: adder_tb.sv  clkctr_tb.sv  clkgen_tb.sv  clkgen_var_tb.sv  clkpulsegen_tb.sv  delay_tb.sv  divider_tb.sv  domains_tb.sv  flash_tb.sv  float_ops_tb.sv  lcd_serial_tb.sv  lfsr_tb.sv  multiplier_tb.sv  oled_serial_tb.sv  piso_tb.sv  pulsegen_tb.sv  ram_2port_tb.sv  ram_tb.sv  serial_2wire_tb.sv  serial_async_rx_tb.sv  serial_async_tx_tb.sv  serial_tb.sv  serial_tb2.sv  sipo_tb.sv  stack_tb.sv  state_and_counter2_tb.sv  state_and_counter_tb.sv  subtractor_tb.sv  timed_seq.sv  timed_seq_tb.sv  video_tb.sv
fpga_sv/tests/: array_test.sv
micro_ctrl/lib/: .gitignore  drawing.h  drawing3d.c  drawing3d.h  expr.h  keypad.c  keypad.h  lcd.c  lcd.h  maths.c  maths.h  oled.h
micro_ctrl/projects/: lcd.ino  lcd4x20.ino  oled.ino
micro_ctrl/tests/: test_drawing3d.c
micro_proc/lib/: defines.h  drawing.c  drawing3d.c  keypad.c  lcd.h  maths.c  (+3 more)
tools/float/: CMakeLists.txt  arb_float.h  float_dlg.cpp  float_dlg.h  main.cpp  tst_float.cpp
tools/genfont/: CMakeLists.txt  c.cpp  genfont.cpp  genfont.h  helpers.h  main.cpp  sv.cpp  v.cpp  v_opt.cpp  vhdl.cpp  vhdl_opt.cpp
tools/genrom/: CMakeLists.txt  common.cpp  common.h  defs.h  genrom.cpp  hex.cpp  hex.h  img.cpp  img.h  sv.cpp  sv.h  text.cpp  text.h  v.cpp  v.h  vhdl.cpp  vhdl.h
(+253 files in other folders)
